--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ description: Co-founder of York Developers.  Ultra Runner.  Works at Proactis Lt
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/8648315?v=3&s=400
+
+markdown: kramdown
