--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ theme: jekyll-theme-architect
 
 # Name of your site (displayed in the header)
 name: David Betteridge
+title: David Betteridge
 
 # Short bio or description (displayed in the header)
 description: Co-founder of York Developers.  Ultra Runner.  Works at Proactis Ltd
