--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: David Betteridge
 title: David Betteridge
 
 # Short bio or description (displayed in the header)
-description: Co-founder of York Developers.  Ultra Runner.  Works at Proactis Ltd
+description: Co-founder of York Developers.  Ultra Runner.  Works at Hivemap Ltd
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/8648315?v=3&s=400
