--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,5 @@ avatar: https://avatars1.githubusercontent.com/u/8648315?v=3&s=400
 markdown: kramdown
 
 permalink: /blog/:year/:month/:day/:title
+
+include: [".well-known"]
